css/wwwiz.css
/* WILD WILD WIZARDS CSS */

body {
  background-color: #0e0e0e;
}

footer {
  font-family: "Roboto", sans-serif;
  font-weight: 300;
  color: rgb(150, 150, 150);
  background-color: #0e0e0e;
}

a:link {
  color: #cc0000;
}

a:hover {
  color: #990000;
}

a:visited {
  color: #cc0000;
}

a.btn-primary.btn-ptg {
  background-color: #cc0000;
  border-color: #cc0000;
  color: white;
}

a.btn-primary.btn-ptg:hover {
  background-color: #990000;
  border-color: #990000;
  color: rgb(246, 246, 246);
}

.jumbotron {
  position: relative;
  min-height: 450px;
  background-image: url("../images/header.jpg");
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
  z-index: -2;
}

.card {
  font-family: "Roboto", sans-serif;
  width: 40rem;
}

.card-title {
  flex-wrap: nowrap;
}

.www-bg-black {
  background-color: #0e0e0e;
}

.www-bg-orange {
  background-color: #ffcc66;
}

.www-text-red {
  color: #cc0000;
}

.www-title {
  color: #ffcc66;
  font-family: "Ultra", serif;
  text-align: center;
  margin-bottom: 3rem;
}

.coming-soon {
  text-align: center;
  margin-top: 1rem;
}

.contact-info {
  margin-top: 1rem;
}

@media screen and (max-width: 320px) {
  .www-title {
    font-size: 2.5rem;
  }
}

@media screen and (min-width: 321px) and (max-width: 388px) {
  .www-title {
    font-size: 3rem;
  }
}

